--- a/UpDownGame/Base.lproj/Main.storyboard
+++ b/UpDownGame/Base.lproj/Main.storyboard
@@ -83,6 +83,9 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                     </preferredSymbolConfiguration>
                                 </buttonConfiguration>
+                                <connections>
+                                    <segue destination="FAO-XI-oBw" kind="presentation" modalTransitionStyle="crossDissolve" id="8qz-Wf-8HF"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XF8-WE-WYU">
                                 <rect key="frame" x="823" y="198.5" width="53" height="17"/>
@@ -128,16 +131,98 @@
             </objects>
             <point key="canvasLocation" x="86.383928571428569" y="95.652173913043484"/>
         </scene>
+        <!--Credit View Controller-->
+        <scene sceneID="a9u-mf-ByW">
+            <objects>
+                <viewController id="FAO-XI-oBw" customClass="CreditViewController" customModule="UpDownGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aD2-Fb-7d9">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wEi-IA-Ble">
+                                <rect key="frame" x="64" y="8" width="70" height="51"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="xmark.app" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="font" scale="large">
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                    </preferredSymbolConfiguration>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="touchUpDismissButton:" destination="FAO-XI-oBw" eventType="touchUpInside" id="U36-Fb-ndU"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VSB-RP-vyu">
+                                <rect key="frame" x="64" y="108.5" width="200" height="197.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="Nld-nf-kZO"/>
+                                    <constraint firstAttribute="width" constant="200" id="bNs-eP-Nf9"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NX2-yQ-ic4">
+                                <rect key="frame" x="284" y="20" width="548" height="353"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">HI!
+
+I'm Yuvin
+
+github
+ https://github.com/yuvinrho/
+
+HI!
+
+I'm Yuvin
+
+github
+ https://github.com/yuvinrho/
+
+HI!
+
+I'm Yuvin
+
+github
+ https://github.com/yuvinrho/</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="30R-DM-IE1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VSB-RP-vyu" firstAttribute="centerY" secondItem="aD2-Fb-7d9" secondAttribute="centerY" id="1Lr-Zp-xlv"/>
+                            <constraint firstItem="30R-DM-IE1" firstAttribute="bottom" secondItem="NX2-yQ-ic4" secondAttribute="bottom" constant="20" id="GSh-Uc-dr9"/>
+                            <constraint firstItem="NX2-yQ-ic4" firstAttribute="leading" secondItem="VSB-RP-vyu" secondAttribute="trailing" constant="20" id="Jod-lX-OSa"/>
+                            <constraint firstItem="VSB-RP-vyu" firstAttribute="leading" secondItem="30R-DM-IE1" secondAttribute="leading" constant="20" id="Q2u-7D-2d7"/>
+                            <constraint firstItem="wEi-IA-Ble" firstAttribute="top" secondItem="30R-DM-IE1" secondAttribute="top" constant="8" id="XuU-1g-h3Z"/>
+                            <constraint firstItem="NX2-yQ-ic4" firstAttribute="top" secondItem="30R-DM-IE1" secondAttribute="top" constant="20" id="dGv-jL-mMz"/>
+                            <constraint firstItem="30R-DM-IE1" firstAttribute="trailing" secondItem="NX2-yQ-ic4" secondAttribute="trailing" constant="20" id="om6-Y3-GeL"/>
+                            <constraint firstItem="wEi-IA-Ble" firstAttribute="leading" secondItem="30R-DM-IE1" secondAttribute="leading" constant="20" id="qmL-GI-UrX"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a4a-MU-bH9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="86" y="1072"/>
+        </scene>
     </scenes>
     <resources>
         <image name="checkmark.seal.fill" catalog="system" width="128" height="128"/>
         <image name="info.circle" catalog="system" width="128" height="121"/>
         <image name="memories" catalog="system" width="128" height="110"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="xmark.app" catalog="system" width="128" height="114"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="separatorColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemMintColor">
             <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
